--- a/UWB_G071.ioc
+++ b/UWB_G071.ioc
@@ -22,25 +22,30 @@ Mcu.IPNb=8
 Mcu.Name=STM32G071G(6-8-B)Ux
 Mcu.Package=UFQFPN28
 Mcu.Pin0=PC14-OSC32_IN (PC14)
-Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14-BOOT0
-Mcu.Pin12=PB5
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_IWDG_VS_IWDG
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_SYS_VS_DBSignals
-Mcu.Pin18=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin2=PA0
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=19
+Mcu.Pin1=PA0
+Mcu.Pin10=PA8
+Mcu.Pin11=PC6
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14-BOOT0
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=PB5
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=PB8
+Mcu.Pin2=PA2
+Mcu.Pin20=VP_IWDG_VS_IWDG
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_SYS_VS_DBSignals
+Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071GBUx
@@ -83,11 +88,31 @@ PA7.GPIOParameters=GPIO_Speed
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=PinState,GPIO_Label
+PA8.GPIO_Label=LED2
+PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
+PA8.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB0.GPIO_Label=DW_WUP
 PB0.GPIO_PuPd=GPIO_PULLDOWN
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.GPIOParameters=PinState,GPIO_Label
+PB1.GPIO_Label=LED1
+PB1.Locked=true
+PB1.PinState=GPIO_PIN_SET
+PB1.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB3.GPIO_Label=SW_PLUS
+PB3.GPIO_PuPd=GPIO_PULLUP
+PB3.Locked=true
+PB3.Signal=GPIO_Input
+PB4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB4.GPIO_Label=SW_MINUS
+PB4.GPIO_PuPd=GPIO_PULLUP
+PB4.Locked=true
+PB4.Signal=GPIO_Input
 PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=DW_IRQn
 PB5.GPIO_PuPd=GPIO_PULLDOWN
@@ -101,10 +126,18 @@ PB7.GPIOParameters=GPIO_Speed
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB8.GPIOParameters=PinState,GPIO_Label
+PB8.GPIO_Label=RF_CE
+PB8.Locked=true
+PB8.PinState=GPIO_PIN_SET
+PB8.Signal=GPIO_Output
 PC14-OSC32_IN\ (PC14).Mode=HSE-External-Clock-Source
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC_IN
-PC15-OSC32_OUT\ (PC15).Mode=OSC enable
-PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC_EN
+PC6.GPIOParameters=PinState,GPIO_Label
+PC6.GPIO_Label=LED3
+PC6.Locked=true
+PC6.PinState=GPIO_PIN_SET
+PC6.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
