--- a/UWB_G071.ioc
+++ b/UWB_G071.ioc
@@ -2,55 +2,96 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=USART1_RX
+Dma.Request1=USART1_TX
+Dma.RequestsNb=2
+Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.0.EventEnable=DISABLE
+Dma.USART1_RX.0.Instance=DMA1_Channel6
+Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.0.Mode=DMA_CIRCULAR
+Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.0.RequestNumber=1
+Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_RX.0.SignalID=NONE
+Dma.USART1_RX.0.SyncEnable=DISABLE
+Dma.USART1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_RX.0.SyncRequestNumber=1
+Dma.USART1_RX.0.SyncSignalID=NONE
+Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.1.EventEnable=DISABLE
+Dma.USART1_TX.1.Instance=DMA1_Channel7
+Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.1.Mode=DMA_NORMAL
+Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.1.RequestNumber=1
+Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_TX.1.SignalID=NONE
+Dma.USART1_TX.1.SyncEnable=DISABLE
+Dma.USART1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_TX.1.SyncRequestNumber=1
+Dma.USART1_TX.1.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.I2C_Speed_Mode=I2C_Fast
-I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x00602173
+I2C2.IPParameters=Timing
+I2C2.Timing=0x10707DBC
+IWDG.IPParameters=Prescaler,Window,Reload
+IWDG.Prescaler=IWDG_PRESCALER_64
+IWDG.Reload=1000
+IWDG.Window=1000
 KeepUserPlacement=false
 Mcu.CPN=STM32G071GBU6
 Mcu.Family=STM32G0
-Mcu.IP0=I2C1
-Mcu.IP1=IWDG
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM6
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP0=DMA
+Mcu.IP1=I2C2
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM6
+Mcu.IP8=USART1
+Mcu.IPNb=9
 Mcu.Name=STM32G071G(6-8-B)Ux
 Mcu.Package=UFQFPN28
 Mcu.Pin0=PC14-OSC32_IN (PC14)
-Mcu.Pin1=PA0
-Mcu.Pin10=PA8
-Mcu.Pin11=PC6
+Mcu.Pin1=PC15-OSC32_OUT (PC15)
+Mcu.Pin10=PA11 [PA9]
+Mcu.Pin11=PA12 [PA10]
 Mcu.Pin12=PA13
 Mcu.Pin13=PA14-BOOT0
 Mcu.Pin14=PB3
 Mcu.Pin15=PB4
-Mcu.Pin16=PB5
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=PB8
-Mcu.Pin2=PA2
-Mcu.Pin20=VP_IWDG_VS_IWDG
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_SYS_VS_DBSignals
-Mcu.Pin23=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
-Mcu.PinsNb=24
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=PB8
+Mcu.Pin19=VP_IWDG_VS_IWDG
+Mcu.Pin2=PA0
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_SYS_VS_DBSignals
+Mcu.Pin22=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin3=PA1
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071GBUx
 MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
+NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -58,23 +99,34 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=DW_RESET
 PA0.Locked=true
 PA0.Signal=GPIO_Output
+PA1.GPIOParameters=PinState,GPIO_Label
+PA1.GPIO_Label=LED1
+PA1.Locked=true
+PA1.PinState=GPIO_PIN_SET
+PA1.Signal=GPIO_Output
+PA11\ [PA9].Mode=I2C
+PA11\ [PA9].Signal=I2C2_SCL
+PA12\ [PA10].Mode=I2C
+PA12\ [PA10].Signal=I2C2_SDA
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14-BOOT0.Mode=Serial_Wire
 PA14-BOOT0.Signal=SYS_SWCLK
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Speed,GPIO_Label
-PA4.GPIO_Label=DW_NSS
-PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA3.GPIO_Label=DW_WUP
+PA3.GPIO_PuPd=GPIO_PULLDOWN
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=DW_IRQn
+PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.Locked=true
-PA4.Signal=GPIO_Output
+PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Speed
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA5.Locked=true
@@ -88,21 +140,12 @@ PA7.GPIOParameters=GPIO_Speed
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=PinState,GPIO_Label
-PA8.GPIO_Label=LED2
-PA8.Locked=true
-PA8.PinState=GPIO_PIN_SET
-PA8.Signal=GPIO_Output
-PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB0.GPIO_Label=DW_WUP
-PB0.GPIO_PuPd=GPIO_PULLDOWN
+PB0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=DW_NSS
+PB0.GPIO_PuPd=GPIO_NOPULL
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB1.GPIOParameters=PinState,GPIO_Label
-PB1.GPIO_Label=LED1
-PB1.Locked=true
-PB1.PinState=GPIO_PIN_SET
-PB1.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB3.GPIO_Label=SW_PLUS
 PB3.GPIO_PuPd=GPIO_PULLUP
@@ -113,19 +156,10 @@ PB4.GPIO_Label=SW_MINUS
 PB4.GPIO_PuPd=GPIO_PULLUP
 PB4.Locked=true
 PB4.Signal=GPIO_Input
-PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB5.GPIO_Label=DW_IRQn
-PB5.GPIO_PuPd=GPIO_PULLDOWN
-PB5.Locked=true
-PB5.Signal=GPXTI5
-PB6.GPIOParameters=GPIO_Speed
-PB6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.GPIOParameters=GPIO_Speed
-PB7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PB8.GPIOParameters=PinState,GPIO_Label
 PB8.GPIO_Label=RF_CE
 PB8.Locked=true
@@ -133,11 +167,11 @@ PB8.PinState=GPIO_PIN_SET
 PB8.Signal=GPIO_Output
 PC14-OSC32_IN\ (PC14).Mode=HSE-External-Clock-Source
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC_IN
-PC6.GPIOParameters=PinState,GPIO_Label
-PC6.GPIO_Label=LED3
-PC6.Locked=true
-PC6.PinState=GPIO_PIN_SET
-PC6.Signal=GPIO_Output
+PC15-OSC32_OUT\ (PC15).GPIOParameters=PinState,GPIO_Label
+PC15-OSC32_OUT\ (PC15).GPIO_Label=LED2
+PC15-OSC32_OUT\ (PC15).Locked=true
+PC15-OSC32_OUT\ (PC15).PinState=GPIO_PIN_SET
+PC15-OSC32_OUT\ (PC15).Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -159,15 +193,15 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=project.ioc
-ProjectManager.ProjectName=project
+ProjectManager.ProjectFileName=UWB_G071.ioc
+ProjectManager.ProjectName=UWB_G071
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_I2C2_Init-I2C2-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -204,8 +238,8 @@ RCC.USART1Freq_Value=64000000
 RCC.USART2Freq_Value=64000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=128000000
-SH.GPXTI5.0=GPIO_EXTI5
-SH.GPXTI5.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.CalculateBaudRate=4.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
@@ -214,8 +248,8 @@ SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM6.IPParameters=Prescaler
 TIM6.Prescaler=64
-USART2.IPParameters=VirtualMode-Asynchronous
-USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
